# afb-binding

./: .gitignore  CHANGELOG  CMakeLists.txt  LICENSE.txt  README.md  afb-binding.pc.in  changelog  doxyfile  metapkg.txt  migration-to-binding-v4.md  mkapiref.sh  mkbuild.sh  mkdocs.yml  mktar.sh
afb/: afb-api-x3-itf.h  afb-api-x3.h  afb-arg.h  afb-auth.h  afb-binding  afb-binding-postdefs.h  afb-binding-predefs.h  afb-binding-v3.h  afb-binding-v4.h  afb-binding-x4-itf.h  afb-binding-x4.h  afb-binding.h  afb-ctlid.h  afb-errno.h  afb-event-x1-itf.h  afb-event-x1.h  afb-event-x2-itf.h  afb-event-x2.h  afb-export.map  afb-req-subcall-flags.h  afb-req-x1-itf.h  afb-req-x2-itf.h  afb-req-x2.h  afb-session-x2.h  afb-session.h  afb-verbosity.h
afb/c++/: binding  binding-object-v3.hpp  binding-object-v4.hpp  binding-wrap-v3.hpp  binding-wrap-v4.hpp  binding-wrap.hpp
afb/interfaces/: afb-itf-id.h  afb-itf-req-http.h
conf.d/packaging/rpm/: afb-binding.spec
docs/: REVISIONS.md  afb-binding-book.yml  afb-binding-c-book.yml  afb-binding-data.md  afb-binding-info.md  afb-binding-overview.md  afb-binding-references.md  afb-binding-tutorial-v3.md  afb-binding-tutorial-v4.md  afb-binding-vocabulary.md  afb-binding-writing.md  afb-desktop-package.md  afb-events-guide.md  binding-v3-to-v4.md  index.md  migration-to-binding-v4.md
docs/pictures/: Makefile  data-life-cycle.dot  predef-types-converts.dot
docs/reference-v3/: func-api.md  func-daemon.md  func-event.md  func-req.md  func-service.md  macro-log.md  types-and-globals.md
docs/reference-v4/: func-afb-api.md  func-afb-data-array.md  func-afb-data.md  func-afb-event.md  func-afb-evfd.md  func-afb-misc.md  func-afb-predefined-type.md  func-afb-req.md  func-afb-timer.md  func-afb-type.md  index.md  macro-log.md  predefined-afb-type.md  types-and-globals.md
packaging/rpm/: afb-binding.spec
tutorials/: Makefile  hello3.c  hello4.c  hello4pp.cpp  sample.txt  tuto-1.c  tuto-2.c  tuto-3.cpp  tuto-4.c  tuto-5.cpp
tutorials/v3/: Makefile  hello3.c  tuto-1.c  tuto-2.c  tuto-3.cpp  tuto-4.c  tuto-5.cpp  tuto-6.c  tuto-app1.c
tutorials/v3/tic-tac-toe/: AFB.js  Makefile  tic-tac-toe.c  tic-tac-toe.html
tutorials/v4/: Makefile  empty.c  empty.cnf  hello4.c  hello4.info  hello4pp.cpp  tuto-1.c  tuto-1.cpp  tuto-3.cpp
tutorials/v4/c++/: Makefile  hello4.cpp  tuto-1.cpp  tuto-3.cpp
zephyr/: CMakeLists.txt  Kconfig  module.yml
